[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-upload-to-115open"
version = "0.1.0"
description = "Queue and execute CloudDrive2 Remote Upload jobs triggered by qBittorrent completion"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "auto-upload-to-115open" }]
dependencies = [
  "grpcio>=1.62.0",
  "grpcio-tools>=1.62.0",
  "protobuf>=4.25.0",
]

[project.scripts]
auto-upload-enqueue = "auto_upload_to_115open.enqueue:main"
auto-upload-worker = "auto_upload_to_115open.worker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
